# key_generator

./: Cargo.toml  README.md
.github/workflows/: create-release.yml  rust.yml
src/: key_generator.rs  main.rs
