[package]
name = "key_generator"
authors = ["shahow"]
description = "Simple program to Key Generator"
version = "0.1.1"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.1.18", features = ["derive"] }